Login, signup controllers

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,3 +3,7 @@ greeting.pl: <p th:text="Witaj, ' + ${name} + '!'" />
 greeting.en: <p th:text="Hello, ' + ${name} + '!'" />
 user.created.en: <p th:text="'Created user with id, ' + ${id} + '!'" />
 user.created.pl: <p th:text="'Stworzono u¿ytkownika o id, ' + ${id} + '!'" />
+signup.en: Sign up
+signup.pl: Zarejestruj siê
+login.en: Log in
+login.pl: Zaloguj siê
