--- a/src/main/resources/languages_pl.properties
+++ b/src/main/resources/languages_pl.properties
@@ -1,6 +1,6 @@
-home: Witaj na stronie glownej\!
-greeting: <p th:text="Hello, ' + ${name} + '!'" />
-user.created: <p th\:text\="'Created user with id, ' + ${id} + '\!'" />
-signup: Sign up
-login: Log in
-404=404\: Error 404
+home: Witaj na stronie glownej!
+greeting: Witaj
+user.created: Stworzono uzytkownika o id
+signup: Zarejestruj sie
+login: Zaloguj sie
+404=Blad 404
