--- a/src/main/resources/languages_en_GB.properties
+++ b/src/main/resources/languages_en_GB.properties
@@ -1,6 +1,6 @@
 home: Welcome on the home page!
-greeting: <p th:text="Hello, ' + ${name} + '!'" />
-user.created: <p th\:text\="'Created user with id, ' + ${id} + '\!'" />
+greeting: Hello
+user.created: Created user with id
 signup: Sign up
 login: Log in
-404=404\: Error 404
+404=Error 404
