Signup page, signup controller, signup form handling, some improvements

--- a/src/main/resources/languages_pl.properties
+++ b/src/main/resources/languages_pl.properties
@@ -3,4 +3,28 @@ greeting: Witaj
 user.created: Stworzono uzytkownika o id
 signup: Zarejestruj sie
 login: Zaloguj sie
-404=Blad 404
+404: Blad 404
+name.header: Imie
+name.placeholder: Wprowadz swoje imie
+surname.header: Nazwisko
+surname.placeholder: Wprowadz swoje nazwisko
+email.header: Email
+email.placeholder: Wprowadz swoj adres email
+email.repeat.placeholder: Potwierdz swoj email
+password.header: Haslo
+password.placeholder: Wprowadz swoje haslo
+password.repeat.placeholder: Potwierdz swoje haslo
+city.header: Miasto
+city.placeholder: Wprowadz swoje miasto
+street.header: Ulica
+street.placeholder: Wprowadz swoja ulice
+houseNumber.header: Numer mieszkania
+houseNumber.placeholder: Wprowadz swoj numer mieszkania
+role.header: Rola
+role.placeholder: Wybierz swoja role
+role.default.header: Wybierz swoja role
+role.sportsman.header: Sportowiec
+role.gym_owner.header: Wlasciciel sali
+about.header: O mnie
+about.placeholder: Wprowadz informacje o sobie
+termsAcceptance.header: Akceptuje wszelkie warunki i zasady
