Signup page improvements

--- a/src/main/resources/languages_pl.properties
+++ b/src/main/resources/languages_pl.properties
@@ -10,10 +10,10 @@ surname.header: Nazwisko
 surname.placeholder: Wprowadz swoje nazwisko
 email.header: Email
 email.placeholder: Wprowadz swoj adres email
-email.repeat.placeholder: Potwierdz swoj email
+email.confirm.placeholder: Potwierdz swoj email
 password.header: Haslo
 password.placeholder: Wprowadz swoje haslo
-password.repeat.placeholder: Potwierdz swoje haslo
+password.confirm.placeholder: Potwierdz swoje haslo
 city.header: Miasto
 city.placeholder: Wprowadz swoje miasto
 street.header: Ulica
@@ -28,3 +28,5 @@ role.gym_owner.header: Wlasciciel sali
 about.header: O mnie
 about.placeholder: Wprowadz informacje o sobie
 termsAcceptance.header: Akceptuje wszelkie warunki i zasady
+email.confirm.header=Potwierdz adres email
+password.confirm.header=Potwierdz haslo
