--- a/src/main/resources/languages_en_US.properties
+++ b/src/main/resources/languages_en_US.properties
@@ -10,10 +10,10 @@ surname.header: Surname
 surname.placeholder: Enter your surname
 email.header: Email
 email.placeholder: Enter your email address
-email.repeat.placeholder: Confirm your email
+email.confirm.placeholder: Confirm your email
 password.header: Password
 password.placeholder: Enter your password
-password.repeat.placeholder: Confirm your password
+password.confirm.placeholder: Confirm your password
 city.header: City
 city.placeholder: Enter your city
 street.header: Street
@@ -28,3 +28,5 @@ role.gym_owner.header: Gym owner
 about.header: About me
 about.placeholder: Enter some informations about you
 termsAcceptance.header: I accept all terms and conditions.
+email.confirm.header=Email confirm
+password.confirm.header=Confirm password
