--- a/src/main/resources/languages_pl.properties
+++ b/src/main/resources/languages_pl.properties
@@ -30,3 +30,13 @@ about.placeholder: Wprowadz informacje o sobie
 termsAcceptance.header: Akceptuje wszelkie warunki i zasady
 email.confirm.header=Potwierdz adres email
 password.confirm.header=Potwierdz haslo
+name.error=Niepoprawne imie. Mozesz uzyc tylko liter (bez polskich znakow) oraz .,'- (2 do 50 znakow).
+surname.error=Niepoprawne nazwisko. Mozesz uzyc tylko liter (bez polskich znakow) oraz .,'- (2 do 50 znakow).
+email.error=Niepoprawny adres email. Powinien zawierac od 5 do 50 znakow.
+password.error=Niepoprawne haslo. Mozesz uzyc tylko liter (bez polskich znakow) oraz .,'- (8 do 20 znakow).
+city.error=Niepoprawne miasto. Mozesz uzyc tylko liter (bez polskich znakow) oraz .,'- (2 do 50 znakow).
+street.error=Niepoprawna ulica. Mozesz uzyc tylko liter (bez polskich znakow) oraz .,'- (max. 50 znakow).
+houseNumber.error=Niepoprawny numer mieszkania. Mozesz uzyc tylko cyfr od 0-9 (max. 10 znakow).
+role.error=Nie wybrales roli. Wybierz prawidlowa role.
+about.error=Mozesz uzyc tylko liter (bez polskich znakow) oraz .,'- (max. 50 znakow).
+termsAcceptance.error=Musisz zaakceptowac warunki i zasady naszego serwisu.
