--- a/src/main/resources/languages_en_US.properties
+++ b/src/main/resources/languages_en_US.properties
@@ -30,3 +30,13 @@ about.placeholder: Enter some informations about you
 termsAcceptance.header: I accept all terms and conditions.
 email.confirm.header=Email confirm
 password.confirm.header=Confirm password
+name.error=Invalid name. You can use only letters and .,'- (2 to 50 characters).
+surname.error=Invalid surname. You can use only letters and .,'- (2 to 50 characters).
+email.error=Invalid email address (should consist 5 to 50 characters).
+password.error=Invalid password. You can use only letters and .,'- (8 to 20 characters).
+city.error=Invalid city. You can use only letters and .,'- (2 to 50 characters).
+street.error=Invalid street. You can use only letters and .,'- (max 50 characters).
+houseNumber.error=Invalid house number. You can use only 0-9 characters (max 10 characters).
+role.error=You haven't chosen the role. Choose the role properly.
+about.error=You can use only letters and .,'- (max 500 characters).
+termsAcceptance.error=You need to accept our service terms and conditions.
