More and more signup form improvements

--- a/src/main/resources/ValidationMessages_pl.properties
+++ b/src/main/resources/ValidationMessages_pl.properties
@@ -1,10 +1,22 @@
-nameError: Niepoprawne imie. Mozesz uzyc tylko liter (bez polskich znakow) oraz .,'- (2 do 50 znakow).
-surname.error: Niepoprawne nazwisko. Mozesz uzyc tylko liter (bez polskich znakow) oraz .,'- (2 do 50 znakow).
-email.error: Niepoprawny adres email. Powinien zawierac od 5 do 50 znakow.
-password.error: Niepoprawne haslo. Mozesz uzyc tylko liter (bez polskich znakow) oraz .,'- (8 do 20 znakow).
-city.error: Niepoprawne miasto. Mozesz uzyc tylko liter (bez polskich znakow) oraz .,'- (2 do 50 znakow).
-street.error: Niepoprawna ulica. Mozesz uzyc tylko liter (bez polskich znakow) oraz .,'- (max. 50 znakow).
-houseNumber.error: Niepoprawny numer mieszkania. Mozesz uzyc tylko cyfr od 0-9 (max. 10 znakow).
-role.error: Nie wybrales roli. Wybierz prawidlowa role.
-about.error: Mozesz uzyc tylko liter (bez polskich znakow) oraz .,'- (max. 50 znakow).
-termsAcceptance.error: Musisz zaakceptowac warunki i zasady naszego serwisu.
+name.error.blank: Pole imie nie moze byc puste.
+name.error.size: Imie powinno zawierac od {min} do {max} znakow.
+name.error.pattern: Imie powinno zawierac tylko litery i znaki .,'- .
+surname.error.blank: Pole nazwisko nie moze byc puste.
+surname.error.size: Nazwisko powinno zawierac od {min} do {max} znakow.
+surname.error.pattern: Nazwisko powinno zawierac tylko litery i znaki .,'- .
+email.error.blank: Pole email nie moze byc puste.
+email.error.size: Email powinien zawierac od {min} do {max} znakow.
+email.error.pattern: Email powinien byc dostarczony w formie xxx@domain.tld
+password.error.blank: Pole haslo nie moze byc puste.
+password.error.size: Haslo powinno zawierac od {min} do {max} znakow.
+city.error.blank: Pole miasto nie moze byc puste.
+city.error.size: Miasto powinno zawierac od {min} do {max} znakow.
+city.error.pattern: Miasto powinno zawierac tylko litery i znaki .,'- .
+street.error.size: Ulica powinna zawierac max. {max} znakow.
+street.error.pattern: Ulica powinna zawierac tylko litery i znaki .,'- .
+houseNumber.error.size: Numer domu powinien zawierac max. {max} znakow.
+houseNumber.error.pattern: Numer domu powinien zawierac tylko cyfry od 0 do 9.
+role.error.blank: Nie wybrales roli. Wybierz jedna z podanych rol.
+about.error.size: Informacje o Tobie powinny zawierac max. {max} znakow.
+about.error.pattern: Mozesz uzywac tylko liter i znakow .,'- w polu O Tobie.
+termsAcceptance.error.blank: Aby zarejestrowac sie musisz zaakceptowac warunki i zasady naszego serwisu.
