Some signup improvements

--- a/src/main/resources/ValidationMessages_pl.properties
+++ b/src/main/resources/ValidationMessages_pl.properties
@@ -19,4 +19,4 @@ houseNumber.error.pattern: Numer domu powinien zawierac tylko cyfry od 0 do 9.
 role.error.blank: Nie wybrales roli. Wybierz jedna z podanych rol.
 about.error.size: Informacje o Tobie powinny zawierac max. {max} znakow.
 about.error.pattern: Mozesz uzywac tylko liter i znakow .,'- w polu O Tobie.
-termsAcceptance.error.blank: Aby zarejestrowac sie musisz zaakceptowac warunki i zasady naszego serwisu.
+termsAcceptance.error.blank: Aby sie zarejestrowac musisz zaakceptowac warunki i zasady naszego serwisu.
