--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,40 +7,29 @@ login: Log in
 
 #Signup Form
 name.header: Name
-name.placeholder: Enter your name
-name.help-block: Enter your name (required).
+name.placeholder: Enter your name (required).
 surname.header: Surname
-surname.placeholder: Enter your surname
-surname.help-block: Enter your surname (required).
+surname.placeholder: Enter your surname (required).
 email.header: Email
-email.placeholder: Enter your email address
-email.help-block: Enter your email address (required). It will be also your unique login ID.
+email.placeholder: Enter your email address (required). It will be also your unique login ID.
 email.confirm.header: Email confirm
-email.confirm.placeholder: Confirm your email address
-email.confirm.help-block: Confirm your email address (required).
+email.confirm.placeholder: Confirm your email address (required).
 password.header: Password
-password.placeholder: Enter your password
-password.help-block: Enter your unique password (required).
+password.placeholder: Enter your unique password (required).
 password.confirm.header: Confirm password
-password.confirm.placeholder: Confirm your password
-password.confirm.help-block: Confirm your password (required).
+password.confirm.placeholder: Confirm your password (required).
 city.header: City
-city.placeholder: Enter your city
-city.help-block: Enter your city (required).
+city.placeholder: Enter your city (required).
 street.header: Street
-street.placeholder: Enter your street
-street.help-block: Enter your street.
+street.placeholder: Enter your street.
 houseNumber.header: House number
-houseNumber.placeholder: Enter your house number
-houseNumber.help-block: Enter your house number.
+houseNumber.placeholder: Enter your house number.
 role.header: Role
-role.default.header: Choose your role
+role.default.header: Choose your role (required).
 role.sportsman.header: Sportsman
 role.gym_owner.header: Gym owner
-role.help-block: Choose your role (required).
 about.header: About me
 about.placeholder: Enter some informations about you
-about.help-block: Enter some informations about you.
 termsAcceptance.header: I accept all terms and conditions (required).
 
 
