--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -7,38 +7,27 @@ login: Zaloguj sie
 
 #Signup Form
 name.header: Imie
-name.placeholder: Wprowadz swoje imie
-name.help-block: Wprowadz swoje imie (wymagane).
+name.placeholder: Wprowadz swoje imie (wymagane).
 surname.header: Nazwisko
-surname.placeholder: Wprowadz swoje nazwisko
-surname.help-block: Wprowadz swoje nazwisko (wymagane).
+surname.placeholder: Wprowadz swoje nazwisko (wymagane).
 email.header: Email
-email.placeholder: Wprowadz swoj adres email
-email.help-block: Wprowadz swoj adres email (wymagane). Bedzie on jednoczesnie Twoim loginem.
+email.placeholder: Wprowadz swoj adres email (wymagane). Bedzie on takze Twoim loginem.
 email.confirm.header: Potwierdz email
-email.confirm.placeholder: Potwierdz swoj adres email
-email.confirm.help-block: Potwierdz swoj adres email (wymagane).
+email.confirm.placeholder: Potwierdz swoj adres email (wymagane).
 password.header: Haslo
-password.placeholder: Wprowadz swoje haslo
-password.help-block: Wprowadz swoje unikalne haslo (wymagane).
+password.placeholder: Wprowadz swoje unikalne haslo (wymagane).
 password.confirm.header: Potwierdz haslo
-password.confirm.placeholder: Potwierdz swoje haslo
-password.confirm.help-block: Potwierdz swoje haslo (wymagane).
+password.confirm.placeholder: Potwierdz swoje haslo (wymagane).
 city.header: Miasto
-city.placeholder: Wprowadz swoje miasto
-city.help-block: Wprowadz swoje miasto (wymagane).
+city.placeholder: Wprowadz swoje miasto (wymagane).
 street.header: Ulica
-street.placeholder: Wprowadz swoja ulice
-street.help-block: Wprowadz swoja ulice.
+street.placeholder: Wprowadz swoja ulice.
 houseNumber.header: Numer mieszkania
-houseNumber.placeholder: Wprowadz swoj numer mieszkania
-houseNumber.help-block: Wprowadz swoj numer domu.
+houseNumber.placeholder: Wprowadz swoj numer mieszkania.
 role.header: Rola
-role.default.header: Wybierz swoja role
+role.default.header: Wybierz swoja role (wymagane).
 role.sportsman.header: Sportowiec
 role.gym_owner.header: Wlasciciel sali
-role.help-block: Wybierz swoja role (wymagane).
 about.header: O mnie
-about.placeholder: Wprowadz informacje o sobie
-about.help-block: Wprowadz informacje o sobie.
+about.placeholder: Wprowadz informacje o sobie.
 termsAcceptance.header: Akceptuje wszelkie warunki i zasady (wymagane).
