Added MyUtil, more changes in signup form

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -31,5 +31,6 @@ role.gym_owner.header: Gym owner
 about.header: About me
 about.placeholder: Enter some informations about you
 termsAcceptance.header: I accept all terms and conditions (required).
+signupSuccessMessage: Signup successful! The last thing you need to do is to check your mailbox to verify yourself.
 
 
