--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -31,3 +31,4 @@ role.gym_owner.header: Wlasciciel sali
 about.header: O mnie
 about.placeholder: Wprowadz informacje o sobie.
 termsAcceptance.header: Akceptuje wszelkie warunki i zasady (wymagane).
+signupSuccessMessage: Rejestracja przebiegla pomyslnie! Ostatnia rzecza jaka musisz wykonac jest sprawdzenie swojej skrzynki mailowej w celu weryfikacji swojego adresu email.
