--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -1,34 +1,34 @@
-home: Witaj na stronie glownej!
+home: Witaj na stronie g\u0142\u00F3wnej\!
 greeting: Witaj
-user.created: Stworzono uzytkownika o id
-signup: Zarejestruj sie
-login: Zaloguj sie
-404: Blad 404
+user.created: Stworzono u\u017Cytkownika o id
+signup: Zarejestruj si\u0119
+login: Zaloguj si\u0119
+404: B\u0142\u0105d 404
 
 #Signup Form
-name.header: Imie
-name.placeholder: Wprowadz swoje imie (wymagane).
+name.header: Imi\u0119
+name.placeholder: Wprowad\u017A swoje imi\u0119 (wymagane).
 surname.header: Nazwisko
-surname.placeholder: Wprowadz swoje nazwisko (wymagane).
+surname.placeholder: Wprowad\u017A swoje nazwisko (wymagane).
 email.header: Email
-email.placeholder: Wprowadz swoj adres email (wymagane). Bedzie on takze Twoim loginem.
-email.confirm.header: Potwierdz email
-email.confirm.placeholder: Potwierdz swoj adres email (wymagane).
-password.header: Haslo
-password.placeholder: Wprowadz swoje unikalne haslo (wymagane).
-password.confirm.header: Potwierdz haslo
-password.confirm.placeholder: Potwierdz swoje haslo (wymagane).
+email.placeholder: Wprowad\u017A sw\u00F3j adres email (wymagane). B\u0119dzie on tak\u017Ce Twoim loginem.
+email.confirm.header: Potwierd\u017A email
+email.confirm.placeholder: Potwierd\u017A sw\u00F3j adres email (wymagane).
+password.header: Has\u0142o
+password.placeholder: Wprowad\u017A swoje unikalne has\u0142o (wymagane).
+password.confirm.header: Potwierd\u017A has\u0142o
+password.confirm.placeholder: Potwierd\u017A swoje has\u0142o (wymagane).
 city.header: Miasto
-city.placeholder: Wprowadz swoje miasto (wymagane).
+city.placeholder: Wprowad\u017A swoje miasto (wymagane).
 street.header: Ulica
-street.placeholder: Wprowadz swoja ulice.
+street.placeholder: Wprowad\u017A swoj\u0105 ulic\u0119.
 houseNumber.header: Numer mieszkania
-houseNumber.placeholder: Wprowadz swoj numer mieszkania.
+houseNumber.placeholder: Wprowad\u017A sw\u00F3j numer mieszkania.
 role.header: Rola
-role.default.header: Wybierz swoja role (wymagane).
+role.default.header: Wybierz swoj\u0105 rol\u0119 (wymagane).
 role.sportsman.header: Sportowiec
-role.gym_owner.header: Wlasciciel sali
+role.gym_owner.header: W\u0142a\u015Bciciel sali
 about.header: O mnie
-about.placeholder: Wprowadz informacje o sobie.
-termsAcceptance.header: Akceptuje wszelkie warunki i zasady (wymagane).
-signupSuccessMessage: Rejestracja przebiegla pomyslnie! Ostatnia rzecza jaka musisz wykonac jest sprawdzenie swojej skrzynki mailowej w celu weryfikacji swojego adresu email.
+about.placeholder: Wprowad\u017A informacje o sobie.
+termsAcceptance.header: Akceptuj\u0119 wszystkie warunki i zasady serwisu (wymagane).
+signupSuccessMessage: Rejestracja przebieg\u0142a pomy\u015Blnie! Ostatni\u0105 rzecz\u0105 jak\u0105 musisz wykona\u0107 jest sprawdzenie swojej skrzynki mailowej w celu weryfikacji swojego adresu email.
