--- a/src/main/resources/ValidationMessages_pl.properties
+++ b/src/main/resources/ValidationMessages_pl.properties
@@ -1,22 +1,22 @@
-name.error.blank: Pole imie nie moze byc puste.
-name.error.size: Imie powinno zawierac od {min} do {max} znakow.
-name.error.pattern: Imie powinno zawierac tylko litery i znaki .,'- .
-surname.error.blank: Pole nazwisko nie moze byc puste.
-surname.error.size: Nazwisko powinno zawierac od {min} do {max} znakow.
-surname.error.pattern: Nazwisko powinno zawierac tylko litery i znaki .,'- .
-email.error.blank: Pole email nie moze byc puste.
-email.error.size: Email powinien zawierac od {min} do {max} znakow.
-email.error.pattern: Email powinien byc dostarczony w formie xxx@domain.tld
-password.error.blank: Pole haslo nie moze byc puste.
-password.error.size: Haslo powinno zawierac od {min} do {max} znakow.
-city.error.blank: Pole miasto nie moze byc puste.
-city.error.size: Miasto powinno zawierac od {min} do {max} znakow.
-city.error.pattern: Miasto powinno zawierac tylko litery i znaki .,'- .
-street.error.size: Ulica powinna zawierac max. {max} znakow.
-street.error.pattern: Ulica powinna zawierac tylko litery i znaki .,'- .
-houseNumber.error.size: Numer domu powinien zawierac max. {max} znakow.
-houseNumber.error.pattern: Numer domu powinien zawierac tylko cyfry od 0 do 9.
-role.error.blank: Nie wybrales roli. Wybierz jedna z podanych rol.
-about.error.size: Informacje o Tobie powinny zawierac max. {max} znakow.
-about.error.pattern: Mozesz uzywac tylko liter i znakow .,'- w polu O Tobie.
-termsAcceptance.error.blank: Aby sie zarejestrowac musisz zaakceptowac warunki i zasady naszego serwisu.
+name.error.blank: Pole imi\u0119 nie mo\u017Ce by\u0107 puste.
+name.error.size: Imi\u0119 powinno zawiera\u0107 od {min} do {max} znak\u00F3w.
+name.error.pattern: Imi\u0119 powinno zawiera\u0107 tylko litery i znaki .,'- .
+surname.error.blank: Pole nazwisko nie mo\u017Ce by\u0107 puste.
+surname.error.size: Nazwisko powinno zawiera\u0107 od {min} do {max} znak\u00F3w.
+surname.error.pattern: Nazwisko powinno zawiera\u0107 tylko litery i znaki .,'- .
+email.error.blank: Pole email nie mo\u017Ce by\u0107 puste.
+email.error.size: Email powinien zawiera\u0107 od {min} do {max} znak\u00F3w.
+email.error.pattern: Email powinien by\u0107 dostarczony w formie xxx@domain.tld
+password.error.blank: Pole has\u0142o nie mo\u017Ce by\u0107 puste.
+password.error.size: Has\u0142o powinno zawiera\u0107 od {min} do {max} znak\u00F3w.
+city.error.blank: Pole miasto nie mo\u017Ce by\u0107 puste.
+city.error.size: Miasto powinno zawiera\u0107 od {min} do {max} znak\u00F3w.
+city.error.pattern: Miasto powinno zawiera\u0107 tylko litery i znaki .,'- .
+street.error.size: Ulica powinna zawiera\u0107 max. {max} znak\u00F3w.
+street.error.pattern: Ulica powinna zawiera\u0107 tylko litery i znaki .,'- .
+houseNumber.error.size: Numer domu powinien zawiera\u0107 max. {max} znak\u00F3w.
+houseNumber.error.pattern: Numer domu powinien zawiera\u0107 tylko cyfry od 0 do 9.
+role.error.blank: Nie wybra\u0142es roli. Wybierz jedn\u0105 z podanych r\u00F3l.
+about.error.size: Informacje o Tobie powinny zawiera\u0107 max. {max} znak\u00F3w.
+about.error.pattern: Mo\u017Cesz u\u017Cywac tylko liter i znak\u00F3w .,'- w polu O Tobie.
+termsAcceptance.error.blank: Aby si\u0119 zarejestrowa\u0107 musisz zaakceptowa\u0107 warunki i zasady naszego serwisu.
