Email validation handled by signup.jsp

--- a/src/main/resources/ValidationMessages_pl.properties
+++ b/src/main/resources/ValidationMessages_pl.properties
@@ -1,22 +1,23 @@
-name.error.blank: Pole imi\u0119 nie mo\u017Ce by\u0107 puste.
-name.error.size: Imi\u0119 powinno zawiera\u0107 od {min} do {max} znak\u00F3w.
-name.error.pattern: Imi\u0119 powinno zawiera\u0107 tylko litery i znaki .,'- .
-surname.error.blank: Pole nazwisko nie mo\u017Ce by\u0107 puste.
-surname.error.size: Nazwisko powinno zawiera\u0107 od {min} do {max} znak\u00F3w.
-surname.error.pattern: Nazwisko powinno zawiera\u0107 tylko litery i znaki .,'- .
-email.error.blank: Pole email nie mo\u017Ce by\u0107 puste.
-email.error.size: Email powinien zawiera\u0107 od {min} do {max} znak\u00F3w.
-email.error.pattern: Email powinien by\u0107 dostarczony w formie xxx@domain.tld
-password.error.blank: Pole has\u0142o nie mo\u017Ce by\u0107 puste.
-password.error.size: Has\u0142o powinno zawiera\u0107 od {min} do {max} znak\u00F3w.
-city.error.blank: Pole miasto nie mo\u017Ce by\u0107 puste.
-city.error.size: Miasto powinno zawiera\u0107 od {min} do {max} znak\u00F3w.
-city.error.pattern: Miasto powinno zawiera\u0107 tylko litery i znaki .,'- .
-street.error.size: Ulica powinna zawiera\u0107 max. {max} znak\u00F3w.
-street.error.pattern: Ulica powinna zawiera\u0107 tylko litery i znaki .,'- .
-houseNumber.error.size: Numer domu powinien zawiera\u0107 max. {max} znak\u00F3w.
-houseNumber.error.pattern: Numer domu powinien zawiera\u0107 tylko cyfry od 0 do 9.
-role.error.blank: Nie wybra\u0142es roli. Wybierz jedn\u0105 z podanych r\u00F3l.
-about.error.size: Informacje o Tobie powinny zawiera\u0107 max. {max} znak\u00F3w.
-about.error.pattern: Mo\u017Cesz u\u017Cywac tylko liter i znak\u00F3w .,'- w polu O Tobie.
-termsAcceptance.error.blank: Aby si\u0119 zarejestrowa\u0107 musisz zaakceptowa\u0107 warunki i zasady naszego serwisu.
+name.error.blank: Pole imię nie może być puste.
+name.error.size: Imię powinno zawierać od {min} do {max} znaków.
+name.error.pattern: Imię powinno zawierać tylko litery i znaki .,'- .
+surname.error.blank: Pole nazwisko nie może być puste.
+surname.error.size: Nazwisko powinno zawierać od {min} do {max} znaków.
+surname.error.pattern: Nazwisko powinno zawierać tylko litery i znaki .,'- .
+email.error.blank: Pole email nie może być puste.
+email.error.size: Email powinien zawierać od {min} do {max} znaków.
+email.error.pattern: Email powinien być dostarczony w formie xxx@domain.tld
+emailNotUnique: Podany adres email znajduje się już w bazie użytkowników.
+password.error.blank: Pole hasło nie może być puste.
+password.error.size: Hasło powinno zawierać od {min} do {max} znaków.
+city.error.blank: Pole miasto nie może być puste.
+city.error.size: Miasto powinno zawierać od {min} do {max} znaków.
+city.error.pattern: Miasto powinno zawierać tylko litery i znaki .,'- .
+street.error.size: Ulica powinna zawierać max. {max} znaków.
+street.error.pattern: Ulica powinna zawierać tylko litery i znaki .,'- .
+houseNumber.error.size: Numer domu powinien zawierać max. {max} znaków.
+houseNumber.error.pattern: Numer domu powinien zawierać tylko cyfry od 0 do 9.
+role.error.blank: Nie wybrałes roli. Wybierz jedną z podanych ról.
+about.error.size: Informacje o Tobie powinny zawierać max. {max} znaków.
+about.error.pattern: Możesz używac tylko liter i znaków .,'- w polu O Tobie.
+termsAcceptance.error.blank: Aby się zarejestrować musisz zaakceptować warunki i zasady naszego serwisu.
