--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,6 +14,7 @@ email.header: Email
 email.placeholder: Enter your email address (required). It will be also your unique login ID.
 email.confirm.header: Email confirm
 email.confirm.placeholder: Confirm your email address (required).
+emailNotUnique: Entered email is already in database. Enter another email address.
 password.header: Password
 password.placeholder: Enter your unique password (required).
 password.confirm.header: Confirm password
