--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -1,34 +1,35 @@
-home: Witaj na stronie g\u0142\u00F3wnej\!
+home: Witaj na stronie głównej!
 greeting: Witaj
-user.created: Stworzono u\u017Cytkownika o id
-signup: Zarejestruj si\u0119
-login: Zaloguj si\u0119
-404: B\u0142\u0105d 404
+user.created: Stworzono użytkownika o id
+signup: Zarejestruj się
+login: Zaloguj się
+404: Błąd 404
 
 #Signup Form
-name.header: Imi\u0119
-name.placeholder: Wprowad\u017A swoje imi\u0119 (wymagane).
+name.header: Imię
+name.placeholder: Wprowadź swoje imię (wymagane).
 surname.header: Nazwisko
-surname.placeholder: Wprowad\u017A swoje nazwisko (wymagane).
+surname.placeholder: Wprowadź swoje nazwisko (wymagane).
 email.header: Email
-email.placeholder: Wprowad\u017A sw\u00F3j adres email (wymagane). B\u0119dzie on tak\u017Ce Twoim loginem.
-email.confirm.header: Potwierd\u017A email
-email.confirm.placeholder: Potwierd\u017A sw\u00F3j adres email (wymagane).
-password.header: Has\u0142o
-password.placeholder: Wprowad\u017A swoje unikalne has\u0142o (wymagane).
-password.confirm.header: Potwierd\u017A has\u0142o
-password.confirm.placeholder: Potwierd\u017A swoje has\u0142o (wymagane).
+email.placeholder: Wprowadź swój adres email (wymagane). Będzie on także Twoim loginem.
+email.confirm.header: Potwierdź email
+email.confirm.placeholder: Potwierdź swój adres email (wymagane).
+emailNotUnique: Podany adres email znajduje się już w bazie użytkowników.
+password.header: Hasło
+password.placeholder: Wprowadź swoje unikalne hasło (wymagane).
+password.confirm.header: Potwierdź hasło
+password.confirm.placeholder: Potwierdź swoje hasło (wymagane).
 city.header: Miasto
-city.placeholder: Wprowad\u017A swoje miasto (wymagane).
+city.placeholder: Wprowadź swoje miasto (wymagane).
 street.header: Ulica
-street.placeholder: Wprowad\u017A swoj\u0105 ulic\u0119.
+street.placeholder: Wprowadź swoją ulicę.
 houseNumber.header: Numer mieszkania
-houseNumber.placeholder: Wprowad\u017A sw\u00F3j numer mieszkania.
+houseNumber.placeholder: Wprowadź swój numer mieszkania.
 role.header: Rola
-role.default.header: Wybierz swoj\u0105 rol\u0119 (wymagane).
+role.default.header: Wybierz swoją rolę (wymagane).
 role.sportsman.header: Sportowiec
-role.gym_owner.header: W\u0142a\u015Bciciel sali
+role.gym_owner.header: Właściciel sali
 about.header: O mnie
-about.placeholder: Wprowad\u017A informacje o sobie.
-termsAcceptance.header: Akceptuj\u0119 wszystkie warunki i zasady serwisu (wymagane).
-signupSuccessMessage: Rejestracja przebieg\u0142a pomy\u015Blnie! Ostatni\u0105 rzecz\u0105 jak\u0105 musisz wykona\u0107 jest sprawdzenie swojej skrzynki mailowej w celu weryfikacji swojego adresu email.
+about.placeholder: Wprowadź informacje o sobie.
+termsAcceptance.header: Akceptuję wszystkie warunki i zasady serwisu (wymagane).
+signupSuccessMessage: Rejestracja przebiegła pomyślnie! Ostatnią rzeczą jaką musisz wykonać jest sprawdzenie swojej skrzynki mailowej w celu weryfikacji swojego adresu email.
