--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,7 +2,11 @@ home: Welcome on the home page!
 greeting: Hello
 user.created: Created user with id
 signup: Sign up
-login: Log in
+signin: Sign in
+signin.invalid: Invalid username and password.
+signout: Sign out
+loggedOut: You have been logged out.
+
 404: Error 404
 
 #Signup Form
@@ -11,12 +15,14 @@ name.placeholder: Enter your name (required).
 surname.header: Surname
 surname.placeholder: Enter your surname (required).
 email.header: Email
-email.placeholder: Enter your email address (required). It will be also your unique login ID.
+email.signup.placeholder: Enter your email address (required). It will be also your unique login ID.
+email.signin.placeholder: Enter your email address.
 email.confirm.header: Email confirm
 email.confirm.placeholder: Confirm your email address (required).
 emailNotUnique: Entered email is already in database. Enter another email address.
 password.header: Password
-password.placeholder: Enter your unique password (required).
+password.signup.placeholder: Enter your unique password (required).
+password.signin.placeholder: Enter your password.
 password.confirm.header: Confirm password
 password.confirm.placeholder: Confirm your password (required).
 city.header: City
@@ -33,3 +39,4 @@ about.header: About me
 about.placeholder: Enter some informations about you
 termsAcceptance.header: I accept all terms and conditions (required).
 signupSuccessMessage: Signup successful! The last thing you need to do is to check your mailbox to verify yourself.
+
