--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -2,7 +2,11 @@ home: Witaj na stronie g\u0142\u00F3wnej!
 greeting: Witaj
 user.created: Stworzono u\u017Cytkownika o id
 signup: Zarejestruj si\u0119
-login: Zaloguj si\u0119
+signin: Zaloguj si\u0119
+signin.invalid: Niepoprawna nazwa u\u017Cytkownika lub has\u0142o.
+signout: Wyloguj si\u0119
+loggedOut: Zosta\u0142e\u015B wylogowany.
+
 404: B\u0142\u0105d 404
 
 #Signup Form
@@ -11,12 +15,14 @@ name.placeholder: Wprowad\u017A swoje imi\u0119 (wymagane).
 surname.header: Nazwisko
 surname.placeholder: Wprowad\u017A swoje nazwisko (wymagane).
 email.header: Email
-email.placeholder: Wprowad\u017A sw\u00F3j adres email (wymagane). B\u0119dzie on tak\u017Ce Twoim loginem.
+email.signup.placeholder: Wprowad\u017A sw\u00F3j adres email (wymagane). B\u0119dzie on tak\u017Ce Twoim loginem.
+email.signin.placeholder: Wprowad\u017A sw\u00F3j adres email.
 email.confirm.header: Potwierd\u017A email
 email.confirm.placeholder: Potwierd\u017A sw\u00F3j adres email (wymagane).
 emailNotUnique: Podany adres email znajduje si\u0119 ju\u017C w bazie u\u017Cytkownik\u00F3w.
 password.header: Has\u0142o
-password.placeholder: Wprowad\u017A swoje unikalne has\u0142o (wymagane).
+password.signup.placeholder: Wprowad\u017A swoje unikalne has\u0142o (wymagane).
+password.signin.placeholder: Wprowad\u017A swoje has\u0142o.
 password.confirm.header: Potwierd\u017A has\u0142o
 password.confirm.placeholder: Potwierd\u017A swoje has\u0142o (wymagane).
 city.header: Miasto
