Login improvement, visual improvements

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,6 +7,8 @@ signin.invalid: Invalid username and password.
 signout: Sign out
 loggedOut: You have been logged out.
 
+profile: Profile
+
 404: Error 404
 
 #Signup Form
@@ -39,4 +41,3 @@ about.header: About me
 about.placeholder: Enter some informations about you
 termsAcceptance.header: I accept all terms and conditions (required).
 signupSuccessMessage: Signup successful! The last thing you need to do is to check your mailbox to verify yourself.
-
