--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -7,6 +7,8 @@ signin.invalid: Niepoprawna nazwa u\u017Cytkownika lub has\u0142o.
 signout: Wyloguj si\u0119
 loggedOut: Zosta\u0142e\u015B wylogowany.
 
+profile: Profil
+
 404: B\u0142\u0105d 404
 
 #Signup Form
