Remember me and password bcrypt encoding

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,6 +4,7 @@ user.created: Created user with id
 signup: Sign up
 signin: Sign in
 signin.invalid: Invalid username and password.
+signin.rememberme: Remember me
 signout: Sign out
 loggedOut: You have been logged out.
 
