--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -4,6 +4,7 @@ user.created: Stworzono u\u017Cytkownika o id
 signup: Zarejestruj si\u0119
 signin: Zaloguj si\u0119
 signin.invalid: Niepoprawna nazwa u\u017Cytkownika lub has\u0142o.
+signin.rememberme: Zapami\u0119taj mnie
 signout: Wyloguj si\u0119
 loggedOut: Zosta\u0142e\u015B wylogowany.
 
