Forgot password, reset password views

--- a/src/main/resources/ValidationMessages_pl.properties
+++ b/src/main/resources/ValidationMessages_pl.properties
@@ -7,9 +7,12 @@ surname.error.pattern: Nazwisko powinno zawiera\u0107 tylko litery i znaki .,'- 
 email.error.blank: Pole email nie mo\u017Ce by\u0107 puste.
 email.error.size: Email powinien zawiera\u0107 od {min} do {max} znak\u00F3w.
 email.error.pattern: Email powinien by\u0107 dostarczony w formie xxx@domain.tld
-emailNotUnique: Podany adres email znajduje si\u0119 ju\u017C w bazie u\u017Cytkownik\u00F3w.
+//email.error.notUnique: Podany adres email znajduje si\u0119 ju\u017C w bazie u\u017Cytkownik\u00F3w.
+//email.error.notFound: Adres email nie zosta\u0142 znaleziony.
+//email.error.doNotMatch: Wprowadzone adresy email s\u0105 r\u00F3\u017Cne.
 password.error.blank: Pole has\u0142o nie mo\u017Ce by\u0107 puste.
 password.error.size: Has\u0142o powinno zawiera\u0107 od {min} do {max} znak\u00F3w.
+//password.error.doNotMatch: Wprowadzone has\u0142a s\u0105 r\u00F3\u017Cne.
 city.error.blank: Pole miasto nie mo\u017Ce by\u0107 puste.
 city.error.size: Miasto powinno zawiera\u0107 od {min} do {max} znak\u00F3w.
 city.error.pattern: Miasto powinno zawiera\u0107 tylko litery i znaki .,'- .
