--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,12 +5,25 @@ signup: Sign up
 signin: Sign in
 signin.invalid: Invalid username and password.
 signin.rememberme: Remember me
+forgotPassword: Forgot password
+resetPassword: Reset password
+resetPasswordCodeNotValid: This reset password code is not valid.
+checkMailResetPassword: Password reset link was send to your mailbox.
+resetPasswordSubject: Link to reset your password in Suspy
+resetPasswordEmail: Please click <a href="{0}">here</a> to reset your password.
+enterNewPassword: Enter here your new password.
+reenterNewPassword: Reenter here your new password.
+passwordChanged: Your password has been changed.
 signout: Sign out
 loggedOut: You have been logged out.
+incorrect: Incorrect {0}
+clickHere: Click here
 
 profile: Profile
 
-404: Error 404
+#Error View
+unexpectedError: There was an unexpected error (type\=
+goToHomePage: \ to go to home page.
 
 #Signup Form
 name.header: Name
@@ -22,12 +35,15 @@ email.signup.placeholder: Enter your email address (required). It will be also y
 email.signin.placeholder: Enter your email address.
 email.confirm.header: Email confirm
 email.confirm.placeholder: Confirm your email address (required).
-emailNotUnique: Entered email is already in database. Enter another email address.
+email.error.notUnique: Entered email is already in database. Enter another email address.
+email.error.notFound: Email address not found.
+email.error.doNotMatch: Emails do not match.
 password.header: Password
 password.signup.placeholder: Enter your unique password (required).
 password.signin.placeholder: Enter your password.
 password.confirm.header: Confirm password
 password.confirm.placeholder: Confirm your password (required).
+password.error.doNotMatch: Passwords do not match.
 city.header: City
 city.placeholder: Enter your city (required).
 street.header: Street
@@ -36,9 +52,19 @@ houseNumber.header: House number
 houseNumber.placeholder: Enter your house number.
 role.header: Role
 role.default.header: Choose your role (required).
-role.sportsman.header: Sportsman
-role.gym_owner.header: Gym owner
+role.normal_user.header: Normal user
+role.object_owner.header: Object owner
 about.header: About me
 about.placeholder: Enter some informations about you
 termsAcceptance.header: I accept all terms and conditions (required).
 signupSuccessMessage: Signup successful! The last thing you need to do is to check your mailbox to verify yourself.
+
+#Email Account Verification
+verifySubject: Please verify your email address.
+verifyEmail: Hi,<br/><br/>Your email address at Suspy is unverified. Please click the link below to get verified:<br/><br/>{0}<br/><br/>
+alreadyVerified: Your account has been already verified.
+verificationCode: verification code
+verificationSuccess: Verification is successful. Now you can fully enjoy our service.
+emailNotVerified.1: Your email address is not verified.
+emailNotVerified.2: to resend your verification code.
+verificationEmailResendSuccess: Your verification code was resend to your mailbox.
