--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -5,12 +5,25 @@ signup: Zarejestruj si\u0119
 signin: Zaloguj si\u0119
 signin.invalid: Niepoprawna nazwa u\u017Cytkownika lub has\u0142o.
 signin.rememberme: Zapami\u0119taj mnie
+forgotPassword: Zapomnia\u0142e\u015B has\u0142a
+resetPassword: Zresetuj has\u0142o
+resetPasswordCodeNotValid: Wprowadzony kod resetuj\u0105cy has\u0142o nie jest poprawny.
+checkMailResetPassword: Link resetuj\u0105cy Twoje has\u0142o zosta\u0142 wys\u0142any na Twoj\u0105 skrzynk\u0119 pocztow\u0105.
+resetPasswordSubject: Link do zresetowania Twojego has\u0142a w Suspy
+resetPasswordEmail: Kliknij<a href="{0}">tutaj</a>, \u017Ceby zresetowa\u0107 swoje has\u0142o.
+enterNewPassword: Wprowad\u017A swoje nowe has\u0142o.
+reenterNewPassword: Potwierd\u017A swoje nowe has\u0142o.
+passwordChanged: Twoje has\u0142o zosta\u0142o zmienione.
 signout: Wyloguj si\u0119
 loggedOut: Zosta\u0142e\u015B wylogowany.
+incorrect: Niepoprawny {0}
+clickHere: Kliknij tutaj
 
 profile: Profil
 
-404: B\u0142\u0105d 404
+#Error View
+unexpectedError: Wyst\u0105pi\u0142 nieoczekiwany b\u0142\u0105d (typ\=
+goToHomePage: , aby wr\u00F3ci\u0107 do strony g\u0142\u00F3wnej.
 
 #Signup Form
 name.header: Imi\u0119
@@ -22,12 +35,15 @@ email.signup.placeholder: Wprowad\u017A sw\u00F3j adres email (wymagane). B\u011
 email.signin.placeholder: Wprowad\u017A sw\u00F3j adres email.
 email.confirm.header: Potwierd\u017A email
 email.confirm.placeholder: Potwierd\u017A sw\u00F3j adres email (wymagane).
-emailNotUnique: Podany adres email znajduje si\u0119 ju\u017C w bazie u\u017Cytkownik\u00F3w.
+email.error.notUnique: Podany adres email znajduje si\u0119 ju\u017C w bazie u\u017Cytkownik\u00F3w.
+email.error.notFound: Adres email nie zosta\u0142 znaleziony.
+email.error.doNotMatch: Wprowadzone adresy email s\u0105 r\u00F3\u017Cne.
 password.header: Has\u0142o
 password.signup.placeholder: Wprowad\u017A swoje unikalne has\u0142o (wymagane).
 password.signin.placeholder: Wprowad\u017A swoje has\u0142o.
 password.confirm.header: Potwierd\u017A has\u0142o
 password.confirm.placeholder: Potwierd\u017A swoje has\u0142o (wymagane).
+password.error.doNotMatch: Wprowadzone has\u0142a s\u0105 r\u00F3\u017Cne.
 city.header: Miasto
 city.placeholder: Wprowad\u017A swoje miasto (wymagane).
 street.header: Ulica
@@ -36,9 +52,19 @@ houseNumber.header: Numer mieszkania
 houseNumber.placeholder: Wprowad\u017A sw\u00F3j numer mieszkania.
 role.header: Rola
 role.default.header: Wybierz swoj\u0105 rol\u0119 (wymagane).
-role.sportsman.header: Sportowiec
-role.gym_owner.header: W\u0142a\u015Bciciel sali
+role.normal_user.header: Zwyk\u0142y u\u017Cytkownik
+role.object_owner.header: W\u0142a\u015Bciciel obiektu
 about.header: O mnie
 about.placeholder: Wprowad\u017A informacje o sobie.
 termsAcceptance.header: Akceptuj\u0119 wszystkie warunki i zasady serwisu (wymagane).
 signupSuccessMessage: Rejestracja przebieg\u0142a pomy\u015Blnie! Ostatni\u0105 rzecz\u0105 jak\u0105 musisz wykona\u0107 jest sprawdzenie swojej skrzynki mailowej w celu weryfikacji swojego adresu email.
+
+#Email Account Verification
+verifySubject: Prosimy o weryfikacj\u0119 adresu email.
+verifyEmail: Cze\u015B\u0107,<br/><br/>Tw\u00F3j adres email w "Suspy" jest niezweryfikowany. Kliknij w link poni\u017Cej, aby go zweryfikowa\u0107:<br/><br/>{0}<br/><br/>
+alreadyVerified: Twoje konto zosta\u0142o ju\u017C zweryfikowane.
+verificationCode: kod weryfikacyjny
+verificationSuccess: Weryfikacja przebieg\u0142a pomy\u015Blnie. Teraz mo\u017Cesz w pe\u0142ni cieszy\u0107 si\u0119 mo\u017Cliwo\u015Bciami naszego serwisu.
+emailNotVerified.1: Tw\u00F3j adres email nie jest zweryfikowany.
+emailNotVerified.2: , aby wys\u0142a\u0107 ponownie Tw\u00F3j kod weryfikacyjny.
+verificationEmailResendSuccess: Tw\u00F3j kod weryfikacyjny zosta\u0142 ponownie wys\u0142any na Twoj\u0105 skrzynk\u0119 email.
