--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,6 +7,7 @@ signin.invalid: Invalid username and password.
 signin.rememberme: Remember me
 forgotPassword: Forgot password
 resetPassword: Reset password
+changePassword: Change password
 resetPasswordCodeNotValid: This reset password code is not valid.
 checkMailResetPassword: Password reset link was send to your mailbox.
 resetPasswordSubject: Link to reset your password in Suspy
