--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -7,6 +7,7 @@ signin.invalid: Niepoprawna nazwa u\u017Cytkownika lub has\u0142o.
 signin.rememberme: Zapami\u0119taj mnie
 forgotPassword: Zapomnia\u0142e\u015B has\u0142a
 resetPassword: Zresetuj has\u0142o
+changePassword: Zmie\u0144 has\u0142o
 resetPasswordCodeNotValid: Wprowadzony kod resetuj\u0105cy has\u0142o nie jest poprawny.
 checkMailResetPassword: Link resetuj\u0105cy Twoje has\u0142o zosta\u0142 wys\u0142any na Twoj\u0105 skrzynk\u0119 pocztow\u0105.
 resetPasswordSubject: Link do zresetowania Twojego has\u0142a w Suspy
