User observing added into user.jsp, some little improvements

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -21,7 +21,9 @@ noPermissions: You have no permissions to perform this action.
 incorrect: Incorrect {0}
 clickHere: Click here
 
+#Profile View
 profile: Profile
+userAlreadyObserved: User already observed
 
 #Error View
 unexpectedError: There was an unexpected error (type\=
