--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -21,7 +21,9 @@ noPermissions: Nie masz uprawnie\u0144, aby wykona\u0107 t\u0105 akcj\u0119.
 incorrect: Niepoprawny {0}
 clickHere: Kliknij tutaj
 
+#Profile View
 profile: Profil
+userAlreadyObserved: U\u017Cytkownik ju\u017C obserwowany.
 
 #Error View
 unexpectedError: Wyst\u0105pi\u0142 nieoczekiwany b\u0142\u0105d (typ\=
