Drobne poprawki w formularzu dodawania Miejsca <Niedokończone>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -73,3 +73,7 @@ verificationSuccess: Verification is successful. Now you can fully enjoy our ser
 emailNotVerified.1: Your email address is not verified.
 emailNotVerified.2: to resend your verification code.
 verificationEmailResendSuccess: Your verification code was resend to your mailbox.
+
+#Add Place Form
+place.added: "New place Added"
+place.form: "Add new Place"
