--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -72,3 +72,6 @@ verificationSuccess: Weryfikacja przebieg\u0142a pomy\u015Blnie. Teraz mo\u017Ce
 emailNotVerified.1: Tw\u00F3j adres email nie jest zweryfikowany.
 emailNotVerified.2: , aby wys\u0142a\u0107 ponownie Tw\u00F3j kod weryfikacyjny.
 verificationEmailResendSuccess: Tw\u00F3j kod weryfikacyjny zosta\u0142 ponownie wys\u0142any na Twoj\u0105 skrzynk\u0119 email.
+
+#Add Place Form
+placeAdded: Nowe miejsce dodane
