--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -73,7 +73,16 @@ verificationSuccess: Verification is successful. Now you can fully enjoy our ser
 emailNotVerified.1: Your email address is not verified.
 emailNotVerified.2: to resend your verification code.
 verificationEmailResendSuccess: Your verification code was resend to your mailbox.
+errorTryAgain: Error, try again
 
 #Add Place Form
-place.added: "New place Added"
-place.form: "Add new Place"
+place.added: New place Added
+place.form: Add new Place
+place.form.place_name: Place Name
+place.form.city: City
+place.form.street: Street
+place.form.houseNumber:House Number
+place.form.capacity:Capacity
+
+#Add new TimeSlotForm
+timeSlot.added New time slot added
