Combinig AddPlace and AddTimeSlots forms into one.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -83,6 +83,7 @@ place.form.city: City
 place.form.street: Street
 place.form.houseNumber:House Number
 place.form.capacity:Capacity
+place.form.cost: Cost
 
 #Add new TimeSlotForm
 timeSlot.added New time slot added
