--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -83,7 +83,17 @@ place.form.city: City
 place.form.street: Street
 place.form.houseNumber:House Number
 place.form.capacity:Capacity
-place.form.cost: Cost
+place.form.submit: Add place
+
+place.form.addTimeSlot: Add timeslot
+
+place.form.timeslot.cost: Cost
+place.form.timeslot.date_from:Date from
+place.form.timeslot.hour_from:Hour from
+place.form.timeslot.date_to:Date to
+place.form.timeslot.hour_to:Hour to
+place.form.timeslot.list: Timeslot list
+place.form.timeslot.add: Add timeslot
 
 #Add new TimeSlotForm
 timeSlot.added New time slot added
