Edycja miejsc: Formularz dostępny tylko jeśli jesteś właścicielem miejsca. dostępny: http://localhost:8080/place/edit?id=6

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -94,6 +94,8 @@ place.form.timeslot.date_to:Date to
 place.form.timeslot.hour_to:Hour to
 place.form.timeslot.list: Timeslot list
 place.form.timeslot.add: Add timeslot
-
+#Edit Place form
+place.edit.success: Place successfully modified
+place.edit.submit: Modify place
 #Add new TimeSlotForm
 timeSlot.added New time slot added
