list of user's places Modifying base place parameters TODO: Modifying place's timeslots parameters.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -95,6 +95,8 @@ place.form.timeslot.hour_to:Hour to
 place.form.timeslot.list: Timeslot list
 place.form.timeslot.add: Add timeslot
 #Edit Place form
+place.edit.placeEditButton: Modify
+place.edit.timeslotEditButton: Update timeslots
 place.edit.success: Place successfully modified
 place.edit.submit: Modify place
 #Add new TimeSlotForm
