Fixed:Update Time Slot

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -100,6 +100,7 @@ place.list.timeslot: Place's time slots
 place.list.check.timeslot.button: Time slots
 place.edit.timeslot: Modify time slot
 place.edit.timeslot.success: Time slot modified
+place.edit.timeslot.noChange: Time slot not changed
 #Edit Place form
 place.edit: Modify Place
 place.edit.timeslotEditButton: Update time slots
