Adding new timeslots to places

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -93,6 +93,8 @@ place.form.timeslot.date_to:Date to
 place.form.timeslot.hour_to:Hour to
 place.form.timeslot.list: Time slot list
 place.form.timeslot.add: Add time slot
+place.form.timeslot.notAdded: Error time slot not added
+place.form.timeSlot.added New time slot added
 
 #List Place
 place.list: Your places
@@ -109,4 +111,3 @@ place.edit.submit: Modify place
 
 place.edit.addNewTimeslot.button: Add new time slot
 #Add new TimeSlotForm
-timeSlot.added New time slot added
