More and more improvements

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -77,15 +77,15 @@ verificationEmailResendSuccess: Your verification code was resend to your mailbo
 errorTryAgain: Error, try again
 
 #Add Place Form
-place.added: New place Added
-place.form: Add new Place
-place.form.place_name: Place Name
+place.added: New place created
+place.form: New place
+place.form.place_name: Name
 place.form.city: City
 place.form.street: Street
 place.form.houseNumber:House Number
 place.form.capacity:Capacity
 place.form.owner:Owner
-place.form.submit: Add place
+place.form.submit: Create place
 place.form.timeslot.cost: Cost
 place.form.timeslot.date_from:Date from
 place.form.timeslot.hour_from:Hour from
