eventy i te sprawy

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -76,6 +76,10 @@ emailNotVerified.2: to resend your verification code.
 verificationEmailResendSuccess: Your verification code was resend to your mailbox.
 errorTryAgain: Error, try again
 
+#Event form
+event.name: Name
+event.date_created: Created on
+
 #Add Place Form
 place.added: New place created
 place.form: New place
